# techie-backtester

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  start.bat
doc/: README.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/pages/: Home.tsx
src/techie_backtester/: __init__.py  historical_client.py  runner.py  server.py  strategy_reload.py
tests/: test_smoke.py
